--- a/FiMa/FiMa.csproj
+++ b/FiMa/FiMa.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<?xml version="1.0" encoding="UTF-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net7.0-android;net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.19041.0</TargetFrameworks>
+		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net7.0-tizen</TargetFrameworks> -->
 		<OutputType>Exe</OutputType>
@@ -10,18 +10,14 @@
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
-
 		<!-- Display name -->
 		<ApplicationTitle>FiMa</ApplicationTitle>
-
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.fima</ApplicationId>
+		<ApplicationId>com.agenciacosmos.fima</ApplicationId>
 		<ApplicationIdGuid>ef5ef2bc-cd6c-4d95-9a10-014d656f0145</ApplicationIdGuid>
-
 		<!-- Versions -->
-		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+		<ApplicationDisplayVersion>1.0.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
-
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
@@ -29,90 +25,104 @@
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 	</PropertyGroup>
-
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
-	  <CreatePackage>false</CreatePackage>
+		<CreatePackage>false</CreatePackage>
 	</PropertyGroup>
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
-
+		<MauiIcon Include="Resources\AppIcon\logo.png" />
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
-
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
-
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
-
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 	<ItemGroup>
-	  <Compile Remove="DetalhesCompra.cs" />
+		<Compile Remove="DetalhesCompra.cs" />
+		<Compile Remove="ViewModels\OutcomeViewModel.cs" />
+		<Compile Remove="ViewModels\UserViewModel.cs" />
+		<Compile Remove="ViewModels\IncomeViewModel.cs" />
+		<Compile Remove="Data\DatabaseContext.cs" />
 	</ItemGroup>
-
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Remove="Resources\Images\btn_login_check.png" />
-	  <None Remove="Resources\Images\btn_login_one.png" />
-	  <None Remove="Resources\Images\btn_login_two.png" />
-	  <None Remove="Resources\Images\btn_login_three.png" />
-	  <None Remove="Resources\Images\cypher_logo.png" />
-	  <None Remove="Resources\Images\bg_with_logo.png" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.12" />
+		<PackageReference Include="PureWeen.Maui.FixesAndWorkarounds" Version="1.5.0" />
 	</ItemGroup>
 	<ItemGroup>
-	  <BundleResource Include="Resources\Images\btn_login_check.png" />
-	  <BundleResource Include="Resources\Images\btn_login_one.png" />
-	  <BundleResource Include="Resources\Images\btn_login_two.png" />
-	  <BundleResource Include="Resources\Images\btn_login_three.png" />
-	  <BundleResource Include="Resources\Images\cypher_logo.png" />
-	  <BundleResource Include="Resources\Images\bg_with_logo.png" />
+		<None Remove="Resources\Images\btn_login_check.png" />
+		<None Remove="Resources\Images\btn_login_one.png" />
+		<None Remove="Resources\Images\btn_login_two.png" />
+		<None Remove="Resources\Images\btn_login_three.png" />
+		<None Remove="Resources\Images\cypher_logo.png" />
+		<None Remove="Resources\Images\bg_with_logo.png" />
+		<None Remove="Models\" />
+		<None Remove="Resources\Images\limite_icone.png" />
+		<None Remove="Resources\Images\meta_icone.png" />
+		<None Remove="Resources\Images\excluir_icone.png" />
+		<None Remove="Resources\Images\editar_icone.png" />
+		<None Remove="Resources\AppIcon\logo.png" />
 	</ItemGroup>
 	<ItemGroup>
-	  <MauiXaml Update="AdicionarReceita.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="CreateAccountConcluido.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="CreateAccountTree.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="DetalhesCompra.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="DetalhesReceita.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="ForgotPasswordConcluido.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="ForgotPasswordTree.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="ForgotPasswordTwo.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="ImportarPDF.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="ImportarPDFConcluido.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="PaginaDespesaConcluido.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="PaginaDespesas.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="PaginaReceitaConcluida.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
+		<BundleResource Include="Resources\Images\btn_login_check.png" />
+		<BundleResource Include="Resources\Images\btn_login_one.png" />
+		<BundleResource Include="Resources\Images\btn_login_two.png" />
+		<BundleResource Include="Resources\Images\btn_login_three.png" />
+		<BundleResource Include="Resources\Images\cypher_logo.png" />
+		<BundleResource Include="Resources\Images\bg_with_logo.png" />
+		<BundleResource Include="Resources\Images\limite_icone.png" />
+		<BundleResource Include="Resources\Images\meta_icone.png" />
+		<BundleResource Include="Resources\Images\excluir_icone.png" />
+		<BundleResource Include="Resources\Images\editar_icone.png" />
+		<BundleResource Include="Resources\AppIcon\logo.png" />
+	</ItemGroup>
+	<ItemGroup>
+		<MauiXaml Update="AdicionarReceita.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="CreateAccountConcluido.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="CreateAccountTree.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="DetalhesCompra.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="DetalhesReceita.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="ForgotPasswordConcluido.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="ForgotPasswordTree.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="ForgotPasswordTwo.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="ImportarPDF.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="ImportarPDFConcluido.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="PaginaDespesaConcluido.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="PaginaDespesas.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+		<MauiXaml Update="PaginaReceitaConcluida.xaml">
+			<Generator>MSBuild:Compile</Generator>
+		</MauiXaml>
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="Models\" />
 	</ItemGroup>
 </Project>
